--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -1,6 +1,8 @@
 @model ICollection<Emprestimo>
 @{
     ViewData["Title"] = "Listagem de Empréstimos";
+
+    string Classe = "";
 }
 
 <div class="row">
@@ -22,7 +24,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        @if(Model.Count > 0){
+        @if(Model.Count !=0){
             <table class="table table-striped" > 
                 <thead>
                     <tr><th>Id</th>
@@ -37,7 +39,15 @@
                 <tbody>
                     @foreach(Emprestimo e in Model)
                     {
-                    <tr>
+                        @if((System.DateTime.Compare(System.DateTime.Now, e.DataDevolucao)>0))
+                        {
+                            Classe="text-danger";
+                        }
+                        else
+                        {
+                            Classe="";
+                        }
+                    <tr class="@Classe">
                         <td>@e.Id</td>
                         <td>@e.NomeUsuario</td>
                         <td>@e.DataEmprestimo.ToString("dd/MM/yyyy")</td>
@@ -49,7 +59,8 @@
                     }
                 </tbody>
             </table>
-        }else{
+        }else
+        {
             <p>Nenhum registro encontrado</p>
         }
     </div>
