--- a/Views/Emprestimo/Listagem.cshtml
+++ b/Views/Emprestimo/Listagem.cshtml
@@ -7,62 +7,81 @@
 
 <div class="row">
     <div class="col-md-12">
-    <form class="form-inline" method="POST">
-        <div class="form-group mb-2">
-            <select name="TipoFiltro" class="form-control">
-                <option value="Usuario">Usuário</option>
-                <option value="Livro">Livro</option>
-            </select>
-        </div>
-        <div class="form-group mb-2 mx-sm-3">
-            <input type="text" placeholder="Filtro" name="Filtro" class="form-control" />
-        </div>
-        <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
-    </form>
+        <form class="form-inline" method="POST">
+            <div class="form-group mb-2">
+                <select name="TipoFiltro" class="form-control">
+                    <option value="Usuario">Usuário</option>
+                    <option value="Livro">Livro</option>
+                </select>
+            </div>
+            <div class="form-group mb-2 mx-sm-3">
+                <input type="text" placeholder="Filtro" name="Filtro" class="form-control" />
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Pesquisar</button>
+        </form>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-12">
-        @if(Model.Count !=0){
-            <table class="table table-striped" > 
+        @if (Model.Count != 0)
+        {
+            <table id="listaEmprestimo" class="table table-striped">
                 <thead>
-                    <tr><th>Id</th>
-                    <th>Usuario</th>
-                    <th>Data Empréstimo</th>
-                    <th>Data Devolução</th>
-                    <th>Livro</th>
-                    <th>Autor</th>
-                    <th></th>
+                    <tr>
+                        <th>Id</th>
+                        <th>Usuario</th>
+                        <th>Data Empréstimo</th>
+                        <th>Data Devolução</th>
+                        <th>Livro</th>
+                        <th>Autor</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach(Emprestimo e in Model)
+                    @foreach (Emprestimo e in Model)
                     {
-                        @if((System.DateTime.Compare(System.DateTime.Now, e.DataDevolucao)>0))
+                        @if ((System.DateTime.Compare(System.DateTime.Now, e.DataDevolucao) > 0))
                         {
-                            Classe="text-danger";
+                            Classe = "text-danger";
                         }
                         else
                         {
-                            Classe="";
+                            Classe = "";
                         }
-                    <tr class="@Classe">
-                        <td>@e.Id</td>
-                        <td>@e.NomeUsuario</td>
-                        <td>@e.DataEmprestimo.ToString("dd/MM/yyyy")</td>
-                        <td>@e.DataDevolucao.ToString("dd/MM/yyyy")</td>
-                        <td>@e.Livro.Titulo</td>
-                        <td>@e.Livro.Autor</td>
-                        <td><a href="/Emprestimo/Edicao/@e.Id">Editar</a></td>
-                    </tr>
+                        <tr class="@Classe">
+                            <td>@e.Id</td>
+                            <td>@e.NomeUsuario</td>
+                            <td>@e.DataEmprestimo.ToString("dd/MM/yyyy")</td>
+                            <td>@e.DataDevolucao.ToString("dd/MM/yyyy")</td>
+                            <td>@e.Livro.Titulo</td>
+                            <td>@e.Livro.Autor</td>
+                            <td><a href="/Emprestimo/Edicao/@e.Id">Editar</a></td>
+                        </tr>
                     }
                 </tbody>
             </table>
-        }else
+        }
+        else
         {
             <p>Nenhum registro encontrado</p>
         }
     </div>
 </div>
 
+@section Scripts
+{
+<script>
+    $.extend(true, $.fn.dataTable.defaults, {
+        "searching": false,
+    });
+    $(document).ready(function () {
+        $('#listaEmprestimo').DataTable({
+            "language": {
+                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Portuguese-Brasil.json"
+            },
+            "ordering": false,
+        });
+    });
+</script>
+}
